new heading added

--- a/luminar/luminar.html
+++ b/luminar/luminar.html
@@ -70,6 +70,7 @@ a:-webkit-any-link {
         </style>
     </head>
     <body>
+      <h1>entering for git</h1>
         <nav class="navbar fixed-top  navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
             <img src="logo.png" alt="image not found" loading="lazy">
