canged heading of luminar

--- a/luminar/luminar.html
+++ b/luminar/luminar.html
@@ -10,7 +10,7 @@
                 color: black;
             }
             h1{
-                color: #5e068a;
+                color: red;
             }
             span{
                 color: #5e068a99;
